--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,38 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.App{
+.App {
   display: flex;
-  
 }
 
- .section {
-  width: 70px;
-  background-color: rgb(7, 0, 64);
+.section {
+  width: 80px;
+  background-color: #1F213A;
   border-radius: 0 20px 20px 0;
   height: 100vh;
 }
 
+.userPng {
+  color: #fff;
+  position: relative;
+  margin-left: 9px;
+}
+
+.mode{
+  position: absolute;
+  bottom:150px;
+  margin-left: 30px;
+  width: 20px;
+  height: 20px;
+}
+
+.userPng img {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  bottom:-670px;
+}
