--- a/src/layout/Main/style.css
+++ b/src/layout/Main/style.css
@@ -5,13 +5,51 @@
 
 .main .container {
   margin-left: 330px;
+  overflow-y: scroll;
+  
+}
+
+::-webkit-scrollbar {
+  width: 16px;
+  background: none;
+}
+/* directional buttons */
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+/* empty space "below" the progress bar */
+::-webkit-scrollbar-track {
+  background: none;
+}
+/* top-most layer of the progress bar not covered by the draggable scrolling element */
+::-webkit-scrollbar-track-piece {
+  background: none;
+}
+/* draggable scrolling element that resizes depending on the size of the scrollable element */
+::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  border-radius: 99px;
+  background-color: rgba(88, 89, 91, 0.2);
+  box-sizing: border-box;
+  background-clip: padding-box;
+  padding: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(88, 89, 91, 0.6);
+}
+/* the (usually) bottom corner of the scrollable element, where two scrollbars might meet */
+::-webkit-scrollbar-corner {
+  background: none;
 }
 
 .header {
-  width: 800px;
+  width: 850px;
   margin: 30px auto;
   display: flex;
   justify-content: space-between;
+
 }
 
 .header .invoices {
@@ -23,7 +61,7 @@
 
 .header .invoices button {
   background-color: #7c5df5;
-  padding: 10px;
+  padding: 15px;
   border-radius: 20px;
   border: #7c5df5 1px solid;
   color: #fff;
@@ -39,12 +77,12 @@ button:hover {
   background-color: #fff;
   border-radius: 20px;
   color: #000;
+  
 }
 
 .wrap {
   width: 800px;
   margin: 30px auto;
-
   display: grid;
   grid-template-columns: auto;
   gap: 20px;
@@ -59,6 +97,7 @@ button:hover {
   align-items: center;
   transition: box-shadow 0.3s;
   border-radius: 10px;
+  
 }
 
 .card:hover {
