--- a/src/layout/ViewInvoice/style.css
+++ b/src/layout/ViewInvoice/style.css
@@ -55,6 +55,7 @@
     padding: 30px;
 }
 
+
 .viewCard{
     height: 80px;
 }
@@ -65,6 +66,6 @@
     justify-content: space-between;
 
 }
-p{
-    padding: 10px 0 10px 0;
+.parag{
+    padding: 15px 0 10px 0;
 }
